--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,9 @@
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
 
+    <button class="g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit'
+      data-action='submit'>Submit</button>
+
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const loadEl = document.querySelector('#load');
@@ -62,7 +65,7 @@
         // firebase.analytics(); // call to activate
         // firebase.analytics().logEvent('tutorial_completed');
         // firebase.performance(); // call to activate
-        //
+        // 
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
         try {
@@ -84,6 +87,15 @@
           loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
       });
+
     </script>
+
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+      function onSubmit(token) {
+        document.getElementById("demo-form").submit();
+      }
+    </script>
+
   </body>
 </html>
